--- a/Beamer/Rasterizer_Presentation.tex
+++ b/Beamer/Rasterizer_Presentation.tex
@@ -71,13 +71,13 @@
 
 \begin{frame}\frametitle{Within query}
 
-\includegraphics[scale=0.275]{within.png}
+\includegraphics[scale=0.23]{core_code.png}
 \end{frame}
 
 
-\subsection{Sublist}
+\subsection{Unite sublists}
 
-\begin{frame}\frametitle{Sublist}
+\begin{frame}\frametitle{Unite sublists}
 \hspace{0.5cm} 
 \includegraphics[scale=0.06]{IMG_5504.JPG}
 \end{frame}
