--- a/Report/Report_Rasterizer.tex
+++ b/Report/Report_Rasterizer.tex
@@ -25,50 +25,59 @@
 \usepackage{listings}
 \usepackage{xfrac}
 \usepackage[T1]{fontenc}
+%\usepackage{pygmentize}
+%\usepackage{minted}
 
+\definecolor{middlegray}{rgb}{0.5,0.5,0.5}
+\definecolor{lightgray}{rgb}{0.8,0.8,0.8}%
+\definecolor{orange}{rgb}{0.8,0.3,0.3}
+\definecolor{yac}{rgb}{0.6,0.6,0.1}
 
-%\definecolor{middlegray}{rgb}{0.5,0.5,0.5}
-%\definecolor{lightgray}{rgb}{0.8,0.8,0.8}%
-%\definecolor{orange}{rgb}{0.8,0.3,0.3}
-%\definecolor{yac}{rgb}{0.6,0.6,0.1}
-
-%\lstset{
-%	basicstyle=\small\ttfamily,
-%	keywordstyle=\bfseries\ttfamily\color{orange},
-%	stringstyle=\color{blue}\ttfamily,
-%	commentstyle=\color{teal}\ttfamily,
-%	emph={square}, 
-%	emphstyle=\color{blue}\texttt,
-%	emph={[2]root,base},
-%	emphstyle={[2]\color{yac}\texttt},
-%%	flexiblecolumns=false,
-	%tabsize=2,
-	%xleftmargin=5pt
-%}
+\lstset{
+	basicstyle=\small\ttfamily,
+	keywordstyle=\bfseries\ttfamily\color{orange},
+	stringstyle=\color{blue}\ttfamily,
+	commentstyle=\color{teal}\ttfamily,
+	emph={square}, 
+	emphstyle=\color{blue}\texttt,
+	emph={[2]root,base},
+	emphstyle={[2]\color{yac}\texttt},
+	flexiblecolumns=false,
+	tabsize=2,
+	xleftmargin=5pt
+}
 
 % Default fixed font does not support bold face
-\DeclareFixedFont{\ttb}{T1}{txtt}{bx}{n}{12} % for bold
-\DeclareFixedFont{\ttm}{T1}{txtt}{m}{n}{12}  % for normal
+%\DeclareFixedFont{\ttb}{T1}{txtt}{bx}{n}{10} % for bold
+%\DeclareFixedFont{\ttm}{T1}{txtt}{m}{n}{10}  % for normal
 
 % Custom colors
-\usepackage{color}
-\definecolor{deepblue}{rgb}{0,0,0.5}
-\definecolor{deepred}{rgb}{0.6,0,0}
-\definecolor{deepgreen}{rgb}{0,0.5,0}
+%\usepackage{color}
+%\definecolor{deepblue}{rgb}{0,0,0.5}
+%\definecolor{deepred}{rgb}{0.6,0,0}
+%\definecolor{deepgreen}{rgb}{0,0.5,0}
 % Python style for highlighting
-\newcommand\pythonstyle{\lstset{
-		language=Python,
-		basicstyle=\ttm,
-		otherkeywords={self},             % Add keywords here
-		keywordstyle=\ttb\color{deepblue},
-		emph={MyClass,__init__},          % Custom highlighting
-		emphstyle=\ttb\color{deepred},    % Custom highlighting style
-		stringstyle=\color{deepgreen},
-		frame=tb,                         % Any extra options here
-		showstringspaces=false            % 
-}}
+%\newcommand\pythonstyle{\lstset{
+	%	language=Python,
+%		basicstyle=\ttm,
+%		otherkeywords={self},             % Add keywords here
+%		keywordstyle=\ttb\color{deepblue},
+%		emph={MyClass,__init__},          % Custom highlighting
+%		emphstyle=\ttb\color{deepred},    % Custom highlighting style
+%		stringstyle=\color{deepgreen},
+%		frame=tb,                         % Any extra options here
+%		showstringspaces=false            % 
+%}}
 
 \setlength\parindent{0pt}
+% Python environment
+\lstnewenvironment{python}[1][]
+{
+	\pythonstyle
+	\lstset{#1}
+}
+{}
+
 
 \begin{document}
 
@@ -76,7 +85,8 @@
 \\\noindent University of Freiburg \hspace{10cm}  July 6, 2018
 \\Faculty of Environment and Natural Resources
 \\Module: GIS Plus
-\\Lecturer: João Paulo Pereira, Holger Weinacker
+\\Lecturer: João Paulo Pereira
+\\Module Coordinator: Holger Weinacker
 \\Authors: Luka Kern, Nele Stackelberg and Felix Rentschler
 \\
 
@@ -89,61 +99,55 @@
 \
 \onehalfspacing % larger vertical space between lines 
 %\linenumbers
+%\tableofcontents
 
 
 
 \begin{abstract}
-	A rasterinzing tool creates a regular grid whithin the bounding box of a geometry collection and assigns a value to each cell depending on the presence of a geometry in that cell region. This information can either be a binary one (no-data / data) or based on the geometry attributes. For this Project, the first cell will create a randomized geometry list containing the input data. The attributes for each of the three geometries are stored in a separated attributes list.
+	A rasterizing tool creates a regular grid whithin the bounding box of a geometry collection and assigns a value to each cell depending on the presence of a geometry in that cell region. This information can either be a binary one (no-data / data) or based on the geometry attributes. For this Project, the first cell will create a randomized geometry list containing the input data. The attributes for each of the three geometries are stored in a separated attributes list.
 \end{abstract}
 
 
 \section{Aim of the Project}
-The aim of this project was to create a function that generates a raster-file (.tif). This file displays the geometries from a shapfile, which was given as input to the function. The spatial resolution and name of the output-file can be defined as input to the function.
-For the case that no shapefile is available to run the function, a code to generate random geometries is provided.
+The aim of this project was to create a function that generates a raster-file (.tiff). This file displays the geometries from a shapefile, which was given as argument to the function. No matter what geometry type (point, lines, polygons) and spatial dimensions are stored in the given shapefile, the function has to convert them to a raster file. 
+
+\section{Structure of the Function}
+The path of the shapefile is the functions first argument. 
+A further argument is the amount of pixels, which is used as a proxy for the resolution. The buffersize in pixels and the name of the output file can additionally be defined as arguments for the function. 
+
+Furthermore, the user has the opportunity to specify the name of the result file, to preview the result inline, as well as suppressing the saving of the tiff file.
+For the case, that no shapefile is available to run the function, a code to generate random geometries is provided. (LUKA?!)
 
 
-\section{Structure of the function}
-\subsection{Load in the shapefile}
-To load in the shapefile, the fiona-package is used. Every geometry-object of the shapefile is stored in a GeometryCollection from the shapely-package.
+\subsection{Load in the Shapefile}
+To load in the shapefile, the \textit{Fiona} package is used. Every geometry object of the shapefile is stored in a GeometryCollection from the \emph{Shapely} package.
 
-\subsection{Defining the bounding box}
-We create a buffer around the actual shape of the shapefile which will look prettier in the resulting image. 
+\subsection{Calculate the Resolution}
+To calculate the resolution, the minimum and maximum dimension of the geometry collection on the x- and y- axes are extracted.  Those values are used to determine the range dimension. 
 
-\newpage
-% Python environment
-\lstnewenvironment{python}[1][]
-{
-	\pythonstyle
-	\lstset{#1}
-}
-{}
+The resolution depends on the amount of pixels in each dimension. Because the amount of pixels is one dimension, that is defined as input in the function, the range is divided by this value to get the resolution. Because the x- and y- range may differ, the mean of those two values is used in the calculation above. 
 
+\subsection{Defining the Bounding Box and create a Grid}
+We create a bounding box around the spatial dimension of the shapefile. The purpose of this step is to present the objects in the resulting image with distance to the margin.
 
-\begin{python}
-class MyClass(Yourclass):
-		def __init__(self, my, yours):
-		bla = '5 1 2 3 4'
-		print bla
-\end{python}
-\subsection{R Code}
-\begin{lstlisting}[language=Python]
-#=============================================================================
-#                       Initial Values
-#=============================================================================
-def rasterizer(filepath,
-							pixels=100,
-						buffer=10,
-outputname="output.tiff",
-save=True,
-preview=True):
+The functions argument "buffer" describes the amount of pixels in the bounding box.  To transform the pixel value to the coordinates, it is first multiplied with the resolution, the result is the width of the boundary box.
 
-\end{lstlisting}
+The dimension of the geometry collection (xmin, ymin, xmax, ymax) is used to define the dimension of the outer frame of the bounding box by adding and subtracting the boundary box width.
 
+The minimum and maximum coordinate values (dimension) of the outer frame of the boundary box are used to create a grid with the function \textit{numpy.mgrid}. The coordinates of every grid-cell (= every pixel) are saved as point-geometry. Those geometries are stored in a list.
+%bis geom_pixel beschreiben
+
+\subsection{Within Query}
+
+\subsection{Unite Sublists}
+\subsection{Set Radiometric Resolution}
+\subsection{Flip Array and Save as TIFF}
 
 \section{Issues}
-\
 \subsection{Solved}
 \subsection{Unsolved}
+
+
 
 
 \begin{figure}[!htbp]
